sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:16: error: 'while' expected but 'if' found.
	if (nb == 0) {
        ^AlgBubbleSort1:19: error: '(' expected but '}' found.
} 
^